--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
   </head>
   <body>
-    <div id="root"></div>
+    <div id="root" style="background-color: #fff;"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
